# InfiniteCanvas

./: .gitignore  README.md  feature requests.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml
docs/: AFFINE_COMPARISON.md  AGENT_BRIDGE.md  ARCHITECTURE.local.md  BOARD_OPS.md  CODEBASE_MATURITY_ASSESSMENT.md  CODEX_BRAND_RESEARCH.md  CODE_REVIEW.md  COMPETITIVE_RESEARCH.md  DIAGNOSTICS.md  ENGINEERING_PRODUCTIZATION.md  IC2-competitive-research-2026-07-15.html  IC2-competitive-research-2026-07-15.md  MCP.md  PERF_BASELINE.md  PRODUCT.md  QA_CHECKLIST.md  SAFETY_NET.md  SIMILAR_PROJECTS.md  feature requests.md  ic2-competitive-review-2026-07.html
scripts/: extract-pointer-gestures.mjs  extract-stack-exit.mjs  rebuild-controller.mjs
skills/ic2-moodboard/: SKILL.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/board-ops/: agentProtocol.ts  applyLive.ts  dispatch.ts  dto.ts  errors.ts  fileOps.ts  index.ts  project.ts  read.ts  types.ts  write.ts  writeExtras.ts  writeResult.ts
src/components/: AppDialog.tsx  CanvasPath.tsx  CloseSaveDialog.tsx  CollapsedStackFans.tsx  EmptyState.tsx  EraserCursor.tsx  ErrorBoundary.tsx  GroupSelectionBox.tsx  InfiniteCanvas.tsx  SaveToast.tsx  SizePopover.tsx  StackFolder.tsx  StackUnit.tsx  Toolbar.tsx  WindowChrome.tsx
src/hooks/: appDialog.ts  unsavedPrompt.ts  useAgentBridge.ts  useAutoFocusEdit.ts  useCloseGuard.ts  useDesktopMenu.ts  useHistoryOnce.ts  useKeyboard.ts  (+2 more)
(+148 files in other folders)
