[package]
name = "infinite-canvas"
version = "1.0.0"
description = "PureRef-inspired infinite canvas (Tauri)"
authors = ["InfiniteCanvas"]
edition = "2021"

[lib]
name = "infinite_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
